--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,37 @@ body{
     transform: scale(1);
 }
 
+.sketchy-box {
+    border: 2px solid currentColor;
+    border-radius: 2% 6% 5% 4% / 1% 1% 2% 4%;
+
+    position: relative;
+    background: white;
+    transition: transform 0.2s ease-in-out;
+}
+
+.sketchy-box:hover {
+    transform: rotate(-1deg) scale(1.01);
+}
+
+.sketchy-box::before {
+    content: '';
+    border: 2px solid currentColor;
+    display: block;
+    width: 100%;
+    height: 100%;
+    
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    
+    transform: translate3d(-50%, -50%, 0) scale(1.01) rotate(0.5deg);
+
+    border-radius: 1% 1% 2% 4% / 2% 6% 5% 4%;
+    pointer-events: none;
+    opacity: 0.7;
+}
+
+.sketchy-box:hover::before {
+    transform: translate3d(-50%, -50%, 0) scale(1.02) rotate(-0.5deg);
+}
